k8s/aut-sys/apps/mailserver/mailcalf-manifests/mailcalf-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailcalf
  labels: &labels
    app.kubernetes.io/name: mailcalf
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      priorityClassName: custom-high
      volumes:
        - name: conf-merged
          emptyDir: {}
        - name: conf-configmap
          configMap:
            name: mailcalf-configs
        - name: conf-secrets
          secret:
            secretName: mailcalf-configs
        - name: tls
          secret:
            secretName: tls-mx1.z9.aut-num.de
        - name: mails
          persistentVolumeClaim:
            claimName: mailserver-mails
        - name: data
          persistentVolumeClaim:
            claimName: mailserver-data

      containers:
        - name: mailcalf
          image: git.hanse.de/lilly/mailcalf
          imagePullPolicy: Always
          stdin: true
          securityContext:
            privileged: true
          ports:
            - name: smtp
              containerPort: 25
            - name: submission
              containerPort: 587
            - name: imaps
              containerPort: 993
            - name: rspamd-admin
              containerPort: 11334
            - name: sieve-manage
              containerPort: 4190
          volumeMounts:
            - name: conf-merged
              mountPath: /app/conf
            - name: tls
              mountPath: /app/ssl
            - name: mails
              mountPath: /app/mail
            - name: data
              mountPath: /app/data
          resources:
            requests:
              cpu: "100m"
              memory: "500Mi"
            limits:
              memory: "1Gi"
